--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,14 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "recharts": "^2.7.2",
-    "typescript": "~5.1.6",
+    "typescript": "~4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@types/react-webcam": "^3.0.0",
     "ajv": "^8.12.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
